// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TooltipIcon should allow the user to specify the direction 1`] = `
<TooltipIcon
  align="center"
  className="custom-class"
  direction="top"
  tooltipText="tooltip text"
>
  <button
    className="bx--tooltip__trigger bx--tooltip--a11y bx--tooltip--top bx--tooltip--align-center className"
  >
    <span
      className="bx--assistive-text"
    >
      tooltip text
    </span>
    <svg />
  </button>
</TooltipIcon>
`;

exports[`TooltipIcon should render 1`] = `
<TooltipIcon
  align="center"
  className="custom-class"
  direction="bottom"
  tooltipText="tooltip text"
>
  <button
    className="bx--tooltip__trigger bx--tooltip--a11y bx--tooltip--bottom bx--tooltip--align-center className"
  >
    <span
      className="bx--assistive-text"
    >
      tooltip text
    </span>
    <svg />
  </button>
</TooltipIcon>
`;
